--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -12,5 +12,8 @@
   },
   "ConnectionStrings": {
     "Default": "<PostgreSQL connection string>"
+  },
+  "Quartz": {
+    "NotifierJob": "<Cron for notification message>"
   }
 }
