--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
         <PackageReference Include="Telegram.Bot" Version="15.7.1" />
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.3.2" />
     </ItemGroup>
 
     <ItemGroup>
