--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -7,6 +7,7 @@
     "Default": "<PostgreSQL connection string>"
   },
   "Quartz": {
-    "NotifierJob": "<Cron for notification message>"
+    "NotifierJob": "<Cron for notification message>",
+    "SplitwiseExporterJob": "<Cron for Splitwise export>"
   }
 }
