Add app insights

--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Telegram.Bot" Version="15.7.1"/>
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.3.2"/>
     <PackageReference Include="Splitwise" Version="0.0.3"/>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.16.0"/>
   </ItemGroup>
 
   <ItemGroup>
