--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -16,5 +16,8 @@
   "Quartz": {
     "NotifierJob": "<Cron for notification message>",
     "SplitwiseExporterJob": "<Cron for Splitwise export>"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "<Instrumentation key>"
   }
 }
