Add expense export to Splitwise (#12)
* Add app insights
* Add expense export to Splitwise

--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -14,6 +14,10 @@
     "Default": "<PostgreSQL connection string>"
   },
   "Quartz": {
-    "NotifierJob": "<Cron for notification message>"
+    "NotifierJob": "<Cron for notification message>",
+    "SplitwiseExporterJob": "<Cron for Splitwise export>"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "<Instrumentation key>"
   }
 }
