Add missing configuration

--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -19,5 +19,8 @@
   },
   "ApplicationInsights": {
     "InstrumentationKey": "<Instrumentation key>"
+  },
+  "Splitwise": {
+    "Key": "<Splitwise API key>"
   }
 }
