--- a/Bot/appsettings.json
+++ b/Bot/appsettings.json
@@ -8,6 +8,7 @@
   },
   "Telegram": {
     "Token": "<Telegram bot token>",
+    "ApiUrl": "<Telegram Bot API url. Leave empty to use default.>",
     "AdminId": "<Bot admin id>"
   },
   "ConnectionStrings": {
